--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: blanchedalmond;
+    height: 100vh;
 }
